<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    android:background="@color/green_main"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="20sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_daftar_pengguna"
                android:textColor="@color/green_main"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20sp"
                android:textSize="22sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:hint="@string/txt_e_mail_pengguna"
                android:inputType="textEmailAddress"
                />

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:inputType="textPassword"
                android:hint="@string/txt_password_pengguna"
                />

            <EditText
                android:id="@+id/txtkonfirmasipassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:inputType="textPassword"
                android:hint="@string/txt_konfirmasi_password"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btndaftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/txt_daftar"
                android:background="@color/green_main"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_masuk_disini"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>