<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20sp"
    android:layout_marginStart="20sp"
    android:layout_marginTop="20sp"
    android:layout_marginEnd="20sp"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/lbljadwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_jadwal"
            android:textColor="@color/black"
            android:layout_marginTop="20sp"
            android:layout_marginStart="20sp"
            />

        <TextView
            android:id="@+id/lbldurasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_durasi"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnedit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:text="@string/txt_edit"
            android:background="@color/yellow_warning"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnhapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="50sp"
            android:text="@string/txt_hapus"
            android:layout_marginBottom="10sp"
            android:background="@color/red_danger"
            android:textColor="@color/white"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>