<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_main"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/txt_selamat_datang"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_centerInParent="true"
            />

        <ImageView
            android:id="@+id/ivlogout"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/logout"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="30sp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="20sp"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cvkendalimanual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20sp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="20sp"
            android:layout_alignParentStart="true"
            >

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@drawable/control"
                android:layout_marginStart="20sp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_kendali_manual"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="10sp"
                />



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvnotifikasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20sp"
            android:layout_marginEnd="50sp"
            android:layout_marginTop="20sp"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            >

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@drawable/notifications"
                android:layout_marginStart="20sp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_notifikasi"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="10sp"
                />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvjadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_atur_jadwal"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                />

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@drawable/jadwal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                />
            
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</LinearLayout>