<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.TambahEditJadwal">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_main"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tambah/Edit Jadwal"
            android:layout_centerInParent="true"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp"
            android:textSize="20sp"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="40sp"
        app:cardCornerRadius="20sp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_tambah_edit_jadwal"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    android:textStyle="bold"
                    >
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_mulai_dari"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginStart="30sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="20sp"
                    />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TimePicker
                    android:id="@+id/timepicker_mulai"
                    android:layout_width="wrap_content"
                    android:layout_height="100sp"
                    android:timePickerMode="spinner"
                    android:layout_marginTop="40sp"
                    android:layout_marginStart="25sp"

                    android:layout_marginEnd="20sp"
                    />

                <NumberPicker
                    android:id="@+id/numberpicker_mulai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:value="0"
                    />

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Waktu Tutup"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TimePicker
                    android:id="@+id/timepicker_sampai"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:timePickerMode="spinner"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginTop="40sp"
                    />

                <NumberPicker
                    android:id="@+id/numberpicker_sampai"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:value="0"
                    />


            </LinearLayout>

            
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btntambahjadwal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/txt_tambah_jadwal"
                android:background="@color/green_main"
                android:textColor="@color/white"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>